// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/TextFilter with filterText 1`] = `
.emotion-4 {
  position: relative;
}

.emotion-0 {
  font-size: 12px;
  color: #828282;
  padding: 5px;
  display: block;
  width: 100%;
  box-sizing: border-box;
  height: 26px;
  background: rgba(255,255,255,0.89);
  border: 0 none;
  outline: none;
  border-radius: 2px;
}

.emotion-2 {
  position: absolute;
  background-color: transparent;
  color: #868686;
  border: none;
  width: 25px;
  height: 26px;
  right: 1px;
  top: 0;
  text-align: center;
  cursor: pointer;
  line-height: 23px;
  font-size: 20px;
}

<div
  class="emotion-4 emotion-5"
>
  <input
    autocomplete="off"
    class="emotion-0 emotion-1"
    name="filter-text"
    placeholder="Filter"
    spellcheck="false"
    type="text"
    value="Filter Text"
  />
  <button
    class="clear emotion-2 emotion-3"
  >
    ×
  </button>
</div>
`;

exports[`Storyshots UI|stories/TextFilter without filterText 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-0 {
  font-size: 12px;
  color: #828282;
  padding: 5px;
  display: block;
  width: 100%;
  box-sizing: border-box;
  height: 26px;
  background: rgba(255,255,255,0.89);
  border: 0 none;
  outline: none;
  border-radius: 2px;
}

<div
  class="emotion-2 emotion-3"
>
  <input
    autocomplete="off"
    class="emotion-0 emotion-1"
    name="filter-text"
    placeholder="Filter"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;
